[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cassyy"
module-root = ""

[project]
name = "cassyy"
version = "0.0.10.dev0"
description = "Simple Apereo Central Authentication Service (CAS) client"
authors = [{name = "John Wagenleitner", email = "johnwa@mail.fresnostate.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Authentication", "SSO", "CAS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Home = "https://github.com/jowage58/cassyy"
Source = "https://github.com/jowage58/cassyy"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ty>=0.0.17",
]

[tool.mypy]
python_version = "3.12"
packages = "cassyy"
strict = true
warn_unreachable = true

[tool.ruff]
target-version = "py312"
extend-exclude = [".*", "dist"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
extend-select = [
    "A",  # builtins
    "ARG",  # unused args
    "ASYNC",  # async
    "B",  # flake8-bugbear
    "C4",  # comprehensions
    "DTZ", # datetimez
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate commented out code
    "F",  # Pyflakes
    "G",  # logging format
    "I",   # isort
    "ISC",  # implicit string concat
    "N",  # pep8 naming
    "PERF",  # perflint
    "PIE",  # misc lints
    "PL",  # Pylint
    "PTH",  # pathlib
    "RET",  # returns
    "RSE",  # raises
    "RUF",  # ruff rules
    "S",  # flake8-bandit
    "SIM",  # simplify
    "T20",  # flake8-print
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = ["ASYNC109", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/test_cas.py" = ["E501"]

[tool.ruff.lint.pylint]
max-args = 8
